# smartest-tv

./: .clawhubignore  .coderabbit.yaml  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  community-cache.json  install-skills.sh  pyproject.toml  server.json
.github/: pull_request_template.md
.github/scripts/: check-regressions.py  validate-cache.py  verify-netflix.py
.github/workflows/: cla.yml  hacs-validate.yml  hassfest.yml  lint.yml  release.yml  test.yml  validate-cache.yml
custom_components/smartest_tv/: config_flow.py  const.py  manifest.json  media_player.py
docs/: api-reference.md  demo-script.md  mcp-integration.md  setup-guide.md
docs/contributing/: cache-contributions.md  driver-development.md
docs/getting-started/: first-tv.md  installation.md
docs/guides/: ai-agents.md  multi-tv.md  playing-content.md  recipes.md  recommendations.md  scenes.md  sync-party.md
docs/i18n/: README.de.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.pt-br.md  README.zh.md
docs/integrations/: home-assistant.md  openclaw.md
docs/reference/: cache-format.md  cli.md  config.md  (+1 more)
tests/: test_api.py  test_audio.py  test_browser.py  test_cache.py  test_cache_atomic.py  test_cast.py  test_cli.py  test_dial.py  test_discovery_sanitize.py  test_display.py  test_groups.py  test_ha_media_id.py  test_insights.py  test_lg_driver.py  test_multi.py  test_play_flow.py  test_playback.py  test_queue.py  test_remote.py  test_resolve.py  test_roku_volume.py  test_samsung_driver.py  test_scenes.py  test_sync.py  test_trending.py
(+49 files in other folders)
